--- a/jadeapp/package.json
+++ b/jadeapp/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.9.2",
     "mongoose": "^4.0.2",
     "morgan": "~1.5.1",
+    "promises": "^0.2.5",
     "serve-favicon": "~2.2.0"
   }
 }
